rendered/envs/alpha/vmks/ingressroute-vmalert-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmalert-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`vmalert.ts.zebradil.dev`) || Host(`vmalert.junior.ts.zebradil.dev`)
      services:
        - name: vmalert-vmks
          port: http
